2006-08-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/glide/src/glide_gtk2_drawing.c: (glide_draw_check),
	(glide_draw_option):
	* engines/hc/src/hc-style.c: (hc_draw_check), (hc_draw_option):
	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_option):
	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	(smooth_draw_option), (smooth_draw_check):
	- Fixes cases where the arguments to CHECK_DETAIL were swapped.

2006-08-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/animation.c: (update_animation_info):
	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_slider_button),
	(clearlooks_draw_handle):
	* engines/clearlooks/src/clearlooks_style.c: (draw_resize_grip):
	* engines/clearlooks/src/support.c:
	(clearlooks_scrollbar_visible_steppers):
	* engines/glide/src/glide_gtk2_drawing.c: (glide_draw_check),
	(glide_draw_option):
	* engines/hc/src/hc-style.c: (hc_draw_check), (hc_draw_option):
	* engines/smooth/src/engine/smooth_gtk2_misc.c:
	(gtk_cell_renderer_toggle_get_inconsistent):
	* engines/support/cairo-support.c: (ge_gdk_drawable_to_cairo):
	* engines/support/widget-information.c: (ge_object_is_a),
	(ge_find_combo_box_widget_parent),
	(ge_cell_renderer_toggle_get_inconsistent):
	* engines/support/widget-information.h:
	* engines/thinice/src/thinice_theme_draw.c: (draw_arrow):
	- Small bug/warning fixes all over the place.

2006-08-02  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_shadow), (draw_box): Fix RTL
	combo boxes

2006-08-02 Andrew Johnson <acjgenius@earthlink.net>

	* engines/clearlooks/src/clearlooks_style.c:
	* engines/glide/src/glide_gtk2_drawing.c:
	* engines/glide/src/glide_gtk2_engine.c:
	* engines/glide/src/glide_gtk2_support.c:
	* engines/hc/src/hc-style.c:
	* engines/hc/src/hc_gtk2_support.c:
	* engines/mist/src/mist-style.c:
	* engines/redmond/src/redmond_gtk2_drawing.c:
	* engines/redmond/src/redmond_gtk2_engine.c: